# multicamera_acquisition

./: .flake8  .git-blame-ignore-revs  .gitignore  99-basler.rules  LICENSE  README.md  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
arduino_firmware/: caleb_refactor_test.ipynb
arduino_firmware/23-09-22-6p2-150fps/: 23-09-22-6p2-150fps.ino
arduino_firmware/azure_integration/: 1cam_NIR_azure.ino
arduino_firmware/caleb_refactor/: caleb_refactor.ino
arduino_firmware/monitor-serial-only/: monitor-serial-only.ino
arduino_firmware/monitor-serial-only-compressed/: monitor-serial-only-compressed.ino
arduino_firmware/multicam_with_input_monitoring/: multicam_with_input_monitoring.ino
arduino_firmware/simple_arduino_multicam/: simple_arduino_multicam.ino
docs/: INSTALL.md  TESTING.md
microcontroller_firmware/: trigger_io_test.ipynb
microcontroller_firmware/light_testing_grouped/: light_testing_grouped.ino
microcontroller_firmware/light_testing_one_by_one/: light_testing_one_by_one.ino
microcontroller_firmware/trigger_io/: trigger_io.ino
multicamera_acquisition/: .gitignore  acquisition.py  config.py  config_utils.py  logging_utils.py  paths.py  simple_pyspin.py  sync_utils.py  usb_utils.py  video_io.py  video_io_ffmpeg.py  video_utils.py  videowriter.py  visualization.py  writer.py
multicamera_acquisition.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
multicamera_acquisition/config/: __init__.py  config.py  default_azure_config.py  default_basler_config.py  default_display_config.py  default_ffmpeg_writer_config.py  default_nvc_writer_config.py
multicamera_acquisition/configs/: default_basler_config.py  default_basler_config.yml  default_ffmpeg_writer_config.py
multicamera_acquisition/interfaces/: __init__.py  arduino.py  camera_azure.py  camera_base.py  camera_basler.py  camera_flir.py  camera_lucid.py  camera_uvc.py  config.py  microcontroller.py
multicamera_acquisition/scripts/: record_video.py
multicamera_acquisition/tests/: conftest.py
notebooks/: 23-06-13-dual-azure.ipynb  24-03-09_update_config.ipynb  24_1_14_acquire_from_219_rig.ipynb  24_1_22_minimal_acq.ipynb  basler-example.ipynb  basler_nodemap.ipynb  compress-and-copy-ffmpeg.ipynb  find-and-correct-skipped-frames-in-recording.ipynb  flir-basler-combined-example.ipynb  jack-arduino-test.ipynb  refactor_demo.ipynb  spinnaker-example.ipynb  test-lucid.ipynb
notebooks/.ipynb_checkpoints/: 23-06-13-dual-azure-checkpoint.ipynb
notebooks/azure_integration/: basler-NIR_and_Azure.ipynb  k4a_topbottom_trigger_testing.ipynb  pylon_azure_test.ipynb
notebooks/old/: deleteme.ipynb  (+5 more)
(+74 files in other folders)
