[metadata]
author = dattalab
url = https://github.com/dattalab-6-cam/multicamera_acquisition
description = Multicamera acqusiton from Flir, Basler and Azure Kinect cameras
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    tqdm
    numpy
    pyserial
    pathlib2
    opencv-python
    av

[options.extras_require]
pypylon = 
    pypylon
pyspin = 
    pyspin

[versioneer]
VCS = git
style = pep440
versionfile_source = multicamera_acquisition/_version.py
versionfile_build = multicamera_acquisition/_version.py
tag_prefix =
parentdir_prefix = 