[metadata]
author = dattalab
url = https://github.com/dattalab-6-cam/multicamera_acquisition
description = Multicamera acqusiton from Flir, Basler and Azure Kinect cameras
long_description = file:README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    av
    matplotlib
    notebook
    numpy
    opencv-python
    pathlib2
    pandas
    pathlib2
    pypylon
    pyserial
    pyusb
    pyyaml
    tqdm

[options.extras_require]
pypylon = 
    pypylon
pyk4a =
    pyk4a
pyspin =
    pyspin
rig = 
    pypylon
    pyk4a


[versioneer]
VCS = git
style = pep440
versionfile_source = multicamera_acquisition/_version.py
versionfile_build = multicamera_acquisition/_version.py
tag_prefix =
parentdir_prefix = 